# yewordle

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  tailwind.config.js
public/: game.css  tailwind.css
src/: app.rs  main.rs
src/components/: game.rs  keyboard.rs  message.rs  mod.rs
src/composables/: core.rs  utils.rs
src/types/: answers.rs  gamer_levels.rs  guesses.rs  letters.rs  mod.rs  words.rs
src/views/: home.rs  mod.rs
