[package]
name = "yewordle"
version = "0.1.0"
edition = "2021"
description = "Yewordle - a Wordle clone with Yew.rs"
readme = "README.md"
repository = "https://github.com/yanglinshu/yewordle"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
# serde = { version = "1.0", features = ["derive"] }
# reqwest = { version = "0.11.13", features = ["json"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
# regex = "1.6.0"
stylist = { version = "0.11.0", features = ["yew_integration"]}
gloo = "0.8.0"
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
